Update footer to display last updated date instead of copyright information

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="w3-padding-64 w3-small w3-center" id="footer">
   <div class="w3-row-padding">
     <div class="w3-col s12">
-      © {{ site.time | date: '%Y' }} {{ site.name }}
+      Last updated: {{ site.time | date: '%B %d, %Y' }}
     </div>
   </div>
 </footer>
